# SDL3-GPU-API-wrapper

./: .gitignore  CMakeLists.txt  SDL3_wrapper.cpp  SDL3_wrapper.h  build.py  camera.h  example.cpp  examplecube.cpp  frag.glsl  frag_shader.h  main.cpp  matrix.cpp  matrix.h  mesh.cpp  mesh.h  new_main.cpp  res.h  testgpu_spirv.h  vec3.h  vertex.glsl  vertex_shader.h
